--- a/tool/print/Dockerfile
+++ b/tool/print/Dockerfile
@@ -1,5 +1,7 @@
 FROM ubuntu:18.04
 
+RUN perl -p -i.bak -e 's%https?://(?!security)[^ \t]+%http://jp.archive.ubuntu.com/ubuntu/%g' /etc/apt/sources.list
+
 RUN apt-get update \
   && apt-get install --yes --no-install-recommends \
     build-essential \
@@ -11,6 +13,7 @@ RUN apt-get update \
   && rm -rf /var/lib/apt/lists/*
 
 COPY requirements.txt /root/
+RUN pip3 install wheel
 RUN pip3 install -r /root/requirements.txt
 
 COPY main.py /root/
